--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,13 +1,23 @@
 ---
-import type { CollectionEntry } from 'astro:content';
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import FormattedDate from '../components/FormattedDate.astro';
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import FormattedDate from "../components/FormattedDate.astro";
 
-type Props = CollectionEntry<'blog'>['data'];
+type Props = {
+	title: string;
+	description: string;
+	pubDate: Date;
+	updatedDate?: Date;
+	heroImage: string;
+	category: {
+		name: string;
+		id: string;
+	};
+};
 
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+const { title, description, pubDate, updatedDate, heroImage, category } =
+	Astro.props;
 ---
 
 <html lang="en">
@@ -59,7 +69,16 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<main>
 			<article>
 				<div class="hero-image">
-					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
+					{
+						heroImage && (
+							<img
+								width={1020}
+								height={510}
+								src={heroImage}
+								alt=""
+							/>
+						)
+					}
 				</div>
 				<div class="prose">
 					<div class="title">
@@ -68,11 +87,30 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 							{
 								updatedDate && (
 									<div class="last-updated-on">
-										Last updated on <FormattedDate date={updatedDate} />
+										Last updated on{" "}
+										<FormattedDate date={updatedDate} />
 									</div>
 								)
 							}
 						</div>
+						<a href={`/category/${category.id}`}
+							style={{
+								textDecoration: "none",
+								color: "inherit",
+								display: "flex",
+								justifyContent: "center",
+								alignItems: "center",
+								margin: "2em auto",
+								width: "160px",
+								fontWeight: "bold",
+								fontSize: "14px",
+								padding: "0.5em",
+								backgroundColor: "rgb(var(--gray-light))",
+								borderRadius: "12px",
+							}}
+						>
+							{category.name}
+						</a>
 						<h1>{title}</h1>
 						<hr />
 					</div>
