--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,13 +1,17 @@
 ---
-import BaseHead from '../../components/BaseHead.astro';
-import Header from '../../components/Header.astro';
-import Footer from '../../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
-import { getCollection } from 'astro:content';
-import FormattedDate from '../../components/FormattedDate.astro';
+import BaseHead from "../../components/BaseHead.astro";
+import Header from "../../components/Header.astro";
+import Footer from "../../components/Footer.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../../consts";
+import { getCollection } from "astro:content";
+import FormattedDate from "../../components/FormattedDate.astro";
+import { getBlogs } from "../../libs/client";
+// 一覧を取得
+const blogs = await getBlogs();
+console.log(blogs);
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
+const posts = (await getCollection("blog")).sort(
+  (a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
 );
 ---
 
@@ -91,19 +95,24 @@ const posts = (await getCollection('blog')).sort(
 			<section>
 				<ul>
 					{
-						posts.map((post) => (
-							<li>
-								<a href={`/blog/${post.slug}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
-									<h4 class="title">{post.data.title}</h4>
-									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
-									</p>
-								</a>
-							</li>
-						))
+					  blogs.contents.map((blog) => (
+						<li>
+						  <a href={`/blog/${blog.id}/`}>
+							<img
+							  width={720}
+							  height={360}
+							  src={blog.eyecatch.url}
+							  alt=""
+							/>
+							<h4 class="title">{blog.title}</h4>
+							<p class="date">
+							  <FormattedDate date={new Date(blog.publishedAt)} />
+							</p>
+						  </a>
+						</li>
+					  ))
 					}
-				</ul>
+				  </ul>
 			</section>
 		</main>
 		<Footer />
