--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -93,7 +93,10 @@ const { title, description, pubDate, updatedDate, heroImage, category } =
 								)
 							}
 						</div>
-						<a href={`/category/${category.id}`}
+						<a
+							href={category && category.id
+								? `/category/${category.id}`
+								: "#"}
 							style={{
 								textDecoration: "none",
 								color: "inherit",
@@ -109,8 +112,13 @@ const { title, description, pubDate, updatedDate, heroImage, category } =
 								borderRadius: "12px",
 							}}
 						>
-							{category.name}
+							{
+								category && category.name
+									? category.name
+									: "Uncategorized"
+							}
 						</a>
+
 						<h1>{title}</h1>
 						<hr />
 					</div>
