add contact title

--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -37,7 +37,7 @@ if (Astro.request.method === "POST") {
   <body>
     <Header />
     <main>
-      <h1>お問い合わせ</h1>
+      <h1>お問い合わせV2</h1>
       <ContactForm />
     </main>
     <Footer />
