add image from google drive

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<main>
 			<h1>🧑‍🚀 Hello, Astronaut!</h1>
 			<p>TEST!!!</p>
+			<img src="https://drive.google.com/uc?export=view&id=1PbwRPpH9ySn39LWR1JmwldqooNKcxgX-" alt="ミヌエットの写真" loading="lazy">
 			<p>
 				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
 				template serves as a lightweight, minimally-styled starting point for anyone looking to build
